visibility and naming fixes

--- a/display/web display/html1/style.css
+++ b/display/web display/html1/style.css
@@ -106,7 +106,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -122,7 +122,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -138,7 +138,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -154,7 +154,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -170,7 +170,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -186,7 +186,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -202,7 +202,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -218,7 +218,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -234,7 +234,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -250,7 +250,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -266,7 +266,7 @@
     transform: rotate(-90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -385,7 +385,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -401,7 +401,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -417,7 +417,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -433,7 +433,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -449,14 +449,14 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
    line-height: normal;
    white-space: nowrap;
    }
-   .flatened .left-purple-count-count {
+   .flatened .left-purple-count {
     position: absolute;
    width: 10px;
     height: 14px;
@@ -465,7 +465,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -481,7 +481,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -497,7 +497,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -513,7 +513,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -529,7 +529,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -545,7 +545,7 @@
     transform: rotate(90deg);
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1470,7 +1470,7 @@
     left: 24px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1485,7 +1485,7 @@
     left: 84px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1500,7 +1500,7 @@
     left: 144px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1515,7 +1515,7 @@
     left: 203px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1530,7 +1530,7 @@
     left: 263px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1545,7 +1545,7 @@
     left: 323px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1560,7 +1560,7 @@
     left: 383px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1575,7 +1575,7 @@
     left: 443px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1590,7 +1590,7 @@
     left: 502px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1605,7 +1605,7 @@
     left: 559px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
@@ -1620,7 +1620,7 @@
     left: 628px;
     font-family: "Inter-Regular", Helvetica;
     font-weight: 400;
-   color: #ffffff;
+   color: #000000;
    font-size: 15px;
     text-align: center;
    letter-spacing: 0;
